--- a/src/components/MenuBackdrop/DropDownbar.css
+++ b/src/components/MenuBackdrop/DropDownbar.css
@@ -1,45 +1,37 @@
-.side-drawer {
-  height: 100%;
+.dropdown {
+  height: 100px;
   background: white;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
-  width: 70%;
-  max-width: 250px;
+  width: 140px;
+  max-width: 280px;
   z-index: 200;
   margin-top: 45px;
+  margin-left: 1300px;
 }
 
-.side-drawer li {
+.dropdown li {
   padding: 5px 10px;
-  margin-left: -25px;
+  margin-left: -40px;
+  margin-bottom: 10px;
   font-size: 0.8rem;
 }
 
-.side-drawer ul {
-  height: 100%;
+.dropdown ul {
   list-style: none;
   display: flex;
   flex-direction: column;
 }
 
-.side-drawer a {
+.dropdown a {
   color: black;
   text-decoration: none;
   font-size: 1.2rem;
 }
 
-.sile-drawer a:hover,
-.side-drawer a:active {
+.sdropdown a:hover,
+.dropdown a:active {
   color: sienna;
-}
-
-.logo {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  justify-content: space-between;
-  margin-right: 40px;
-  margin-top: 1px;
 }
