--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -16,6 +16,7 @@
 
 .toolbar_logo {
   margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .toolbar_logo a {
@@ -27,6 +28,11 @@
   flex: 1;
 }
 
+.toolbar_nav_items {
+  position: relative;
+  display: inline-block;
+}
+
 .toolbar_nav_items ul {
   list-style: none;
   margin: 0;
@@ -34,24 +40,75 @@
   display: flex;
 }
 .toolbar_nav_items li {
-  padding: 0 0.5rem;
+  padding: 0;
+  margin: 0;
 }
 
 .toolbar_nav_items a {
-  color: slategrey;
+  color: black;
   text-decoration: none;
+}
+
+.logoimage:hover,
+.logoimage:active {
+  cursor: pointer;
+  background-color: rgba(10, 142, 250, 0.14);
 }
 
 .toolbar_nav_items a:hover,
 .toolbar_nav_items a:active {
-  color: #fa923f;
+  color: rgba(10, 142, 250, 0.14);
 }
 
-.image {
+.imagea {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  justify-content: space-between;
+  padding: 1px 20px;
+  background: none;
+}
+.imageb {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   justify-content: space-between;
-  margin-right: 10px;
-  margin-top: 3px;
+  padding: 1px 20px;
+  background: none;
+}
+.imagec {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  justify-content: space-between;
+  padding: 1px 20px;
+  background: none;
+}
+.imaged {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  justify-content: space-between;
+  padding: 1px 20px;
+  background: none;
+}
+.imagee {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  justify-content: space-between;
+  padding: 1px 20px;
+  background: none;
+}
+
+.logoimage {
+  display: flex;
+  flex-direction: column;
+  margin-right: 1rem;
+  font-size: 0.9rem;
+  background: none;
+  padding: 1px 10px;
+  margin: 0;
+  text-align: center;
+  justify-content: center;
 }
