--- a/src/components/MenuBackdrop/DropDownButton.css
+++ b/src/components/MenuBackdrop/DropDownButton.css
@@ -1,7 +1,7 @@
 .addbar {
   border-radius: 50%;
   font-size: 2rem;
-  background-color: white;
+  background: none;
   border: none;
   vertical-align: middle;
   margin-right: 30px;
