--- a/src/components/MenuBackdrop/DropDownbar.css
+++ b/src/components/MenuBackdrop/DropDownbar.css
@@ -8,14 +8,13 @@
   width: 145px;
   max-width: 280px;
   z-index: 200;
-  margin-top: 30px;
-  margin-left: 1100px;
+  margin-top: 35px;
+  margin-left: 1165px;
 }
 
 .dropdown li {
-  padding: 5px 10px;
-  margin-left: 1px;
-  margin-bottom: 10px;
+  padding: 15px 10px;
+
   font-size: 0.8rem;
 }
 
@@ -36,10 +35,10 @@
 .dropdown li:hover,
 .dropdown li:active {
   cursor: pointer;
-  background-color: rgba(10, 142, 250, 0.14);
+  background-color: orangered;
 }
 
 .dropdown a:hover,
 .dropdown a:active {
-  color: rgba(10, 142, 250, 0.14);
+  color: orangered;
 }
