--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,26 +1,20 @@
 .side-drawer {
   height: 100%;
   background: white;
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
   width: 70%;
-  max-width: 250px;
+  max-width: 400px;
   z-index: 200;
-  margin-top: 45px;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
+  margin-top: 55px;
 }
 
-.side-drawer li {
-  padding: 5px 10px;
-  margin-left: -25px;
-  font-size: 0.8rem;
-}
-
-.side-drawer li:hover,
-.side-drawer li:active {
-  cursor: pointer;
-  background-color: rgba(10, 142, 250, 0.14);
+.side-drawer.open {
+  transform: translateX(0);
 }
 
 .side-drawer ul {
@@ -28,17 +22,28 @@
   list-style: none;
   display: flex;
   flex-direction: column;
+  margin-top: 50px;
+}
+
+.side-drawer li {
+  margin: 0.5rem 0;
 }
 
 .side-drawer a {
   color: black;
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 .side-drawer a:hover,
 .side-drawer a:active {
-  color: rgba(10, 142, 250, 0.14);
+  color: black;
+}
+
+.side-drawer li:hover,
+.side-drawer li:active {
+  cursor: pointer;
+  background-color: orangered;
 }
 
 .logo {
@@ -48,4 +53,24 @@
   justify-content: space-between;
   margin-right: 40px;
   margin-top: 1px;
+}
+
+.addbar2 {
+  border-radius: 50%;
+  font-size: 1.2rem;
+  background-color: white;
+  border: none;
+  vertical-align: middle;
+  margin-right: 30px;
+  margin-bottom: 150px;
+}
+
+.spacer2 {
+  flex: 1;
+}
+
+@media (min-width: 769px) {
+  .side-drawer {
+    display: none;
+  }
 }
