--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -3,61 +3,71 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: white;
-  height: 50px;
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+  background: #0073cf;
+  height: 56px;
 }
-.toolbar_nav {
+
+.toolbar__navigation {
   display: flex;
   height: 100%;
   align-items: center;
-  padding: 0;
+  padding: 0 1rem;
 }
 
-.toolbar_logo {
-  margin-left: 2rem;
-  margin-right: 2rem;
+.toolbar__logo {
+  margin-right: 20px;
 }
 
-.toolbar_logo a {
-  color: slategrey;
+.toolbar__logo a {
+  color: white;
   text-decoration: none;
   font-size: 1.5rem;
 }
+
 .spacer {
   flex: 1;
 }
 
-.toolbar_nav_items {
-  position: relative;
-  display: inline-block;
-}
-
-.toolbar_nav_items ul {
+.toolbar_navigation-items ul {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
-.toolbar_nav_items li {
-  padding: 0;
-  margin: 0;
+
+.toolbar_navigation-items li {
+  padding: 0 0.5rem;
 }
 
-.toolbar_nav_items a {
-  color: black;
+.toolbar_navigation-items a {
+  color: white;
   text-decoration: none;
 }
 
-.logoimage:hover,
-.logoimage:active {
-  cursor: pointer;
-  background-color: rgba(10, 142, 250, 0.14);
+.toolbar_navigation-items a:hover,
+.toolbar_navigation-items a:active {
+  color: orangered;
 }
 
-.toolbar_nav_items a:hover,
-.toolbar_nav_items a:active {
-  color: rgba(10, 142, 250, 0.14);
+.toolbar_navigation-items2 ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.toolbar_navigation-items2 li {
+  padding: 0 0.5rem;
+}
+
+.toolbar_navigation-items2 a {
+  color: white;
+  text-decoration: none;
+}
+
+.toolbar_navigation-items2 a:hover,
+.toolbar_navigation-items2 a:active {
+  color: orangered;
 }
 
 .imagea {
@@ -65,14 +75,15 @@
   height: 35px;
   border-radius: 50%;
   justify-content: space-between;
-  padding: 1px 20px;
+  margin-top: 7px;
   background: none;
+  margin-left: 20px;
 }
 .imageb {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1px 20px;
   background: none;
 }
@@ -80,7 +91,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1px 20px;
   background: none;
 }
@@ -88,7 +99,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1px 20px;
   background: none;
 }
@@ -96,8 +107,18 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1px 20px;
+  background: none;
+}
+
+.imagef {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  justify-content: space-between;
+  padding: 8px 10px;
+  margin: 0;
   background: none;
 }
 
@@ -111,4 +132,26 @@
   margin: 0;
   text-align: center;
   justify-content: center;
+}
+
+.logoimage:hover,
+.logoimage:active {
+  cursor: pointer;
+  background-color: orangered;
+}
+
+@media (max-width: 768px) {
+  .toolbar_navigation-items {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .toolbar__toggle-button {
+    display: none;
+  }
+
+  .toolbar__logo {
+    margin-left: 0;
+  }
 }
